--- a/styles/globals.css
+++ b/styles/globals.css
@@ -51,7 +51,28 @@ body {
   font-family: 'Roboto', sans-serif;
   /* font-family: sans-serif; */
   /* min-height: 100vh; */
+  background: linear-gradient(-45deg, #0c0c0c, #576CA8, #0ea88f, #FAA916);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+  height: 100vh;
+  /* filter: blur(8px); */
+  /* -webkit-filter: blur(8px); */
 }
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
 
 h1,
 h2,
