--- a/components/styles/top_picked.module.css
+++ b/components/styles/top_picked.module.css
@@ -23,8 +23,18 @@
 }
 
 .No1, .No2, .No3 {
-    background-color: #f5f5f5;
+    /* background-color: #f5f5f5; */
+    background: radial-gradient(rgb(255, 193, 193), #f5f5f5);
     padding: 2rem;
+    border-radius: 8px;
+}
+
+.No2, .No3 {
+    display: flex;
+    position: relative;
+    overflow: hidden;
+    padding: 0;
+    height: 200px;
 }
 
 .No2_3 {
@@ -58,4 +68,37 @@
     font-family: Roboto;
     font-size: .9rem;
     color: #fff;
+}
+
+.top_service_title {
+    font-family: Inter;
+    font-size: 1.5rem;
+    font-weight: 900;
+}
+
+.top_service_video_box img {
+    width: 500px;
+}
+
+/* .img_No {
+    position: relative;
+} */
+
+.img_No img {
+    /* max-width: 300px; */
+    /* width: 100%; */
+    height: 100%;
+}
+
+.img_No p {
+    background-color: #fff;
+    width: 60px;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 8px 0 12px 0;
+    position: absolute;
+    top: 3px;
+    left: 3px;
 }
