--- a/components/styles/top_picked.module.css
+++ b/components/styles/top_picked.module.css
@@ -3,102 +3,95 @@
     padding: 50px 150px;
 }
 
-.header_title {
-    font-size: 3rem;
-    background: linear-gradient(90deg, rgb(108, 172, 214), rgb(255, 153, 1));
+.top_picked_title {
+    background: linear-gradient(45deg, #00dbde, #fc00ff);
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    font-family: Inter;
-    font-weight: 900;
-    text-align: center;
+    line-height: 5rem;
     margin-bottom: 2.5rem;
-}
-
-.top_services_box {
-    display: flex;
-    align-items: stretch;
-    justify-content: space-evenly;
-    gap: 2rem;
-}
-
-.No1, .No2, .No3 {
-    /* background-color: #f5f5f5; */
-    background: radial-gradient(rgb(255, 193, 193), #f5f5f5);
-    padding: 2rem;
-    border-radius: 8px;
-}
-
-.No2, .No3 {
-    display: flex;
-    position: relative;
-    overflow: hidden;
-    padding: 0;
-    height: 200px;
-}
-
-.No2_3 {
-    display: flex;
-    flex-direction: column;
-    gap: 1.5rem;
-}
-
-.top_service_details_box .badge {
-    background: linear-gradient(45deg,#FF00FB, #C4FFFB);
-    padding: 12px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-    width: 130px;
-    height: 130px;
-    border-radius: 8px;
-    box-shadow: 2px 2px 4px rgb(165, 165, 165);
-    transform: translateY(-60px);
-}
-
-.top_service_details_box .badge p{
-    color: #fff;
-    font-family: Inter;
-    font-size: 3rem;
-}
-
-.top_service_details_box .badge h4{
-    text-transform: uppercase;
-    font-family: Roboto;
-    font-size: .9rem;
-    color: #fff;
-}
-
-.top_service_title {
-    font-family: Inter;
-    font-size: 1.5rem;
+    padding: 20px;
+    text-align: center;
+    font-family: Inter, sans-serif;
+    font-size: 2.5rem;
     font-weight: 900;
 }
 
-.top_service_video_box img {
-    width: 500px;
-}
-
-/* .img_No {
-    position: relative;
-} */
-
-.img_No img {
-    /* max-width: 300px; */
-    /* width: 100%; */
-    height: 100%;
-}
-
-.img_No p {
-    background-color: #fff;
-    width: 60px;
-    height: 80px;
+.top_services {
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 8px 0 12px 0;
+    gap: 20px;
+}
+
+.top_title_box,
+.bottom_details {
+    padding: 12px;
+    /* border-radius: 12px; */
+}
+
+.top_title_box {
+    background-color: #f5f5f5;
+    border-radius: 12px 12px 0 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.bottom_details {
+    background-color: rgb(240, 243, 255);
+    border-radius: 0 0 12px 12px;
+    margin-top: 8px;
+    height: 40vh;
+    position: relative;
+    overflow: hidden;
+}
+
+.bottom_details button {
     position: absolute;
-    top: 3px;
-    left: 3px;
+    bottom: 12px;
+    width: 90%;
+    left: 50%;
+    transform: translateX(-50%);
+    border: none;
+    padding: 12px;
+    border-radius: 6px;
+    background-color: rgb(52, 52, 194);
+    color: #fff;
+}
+
+.top_service_num {
+    /* background-color: red; */
+    border: 2px solid orange;
+    width: 45px;
+    height: 45px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    margin-bottom: 8px;
+    font-family: Inter;
+    font-weight: bolder;
+    color: orange;
+}
+
+.stars {
+    color: orange;
+}
+
+.nos {
+    font-family: Inter;
+    font-size: 1.5rem;
+    font-weight: bold;
+    background: linear-gradient(45deg, #008c8f, #812483);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.top_service_description {
+    /* background-color: red; */
+    height: 70%;
+    display: flex;
+    align-items: flex-end;
 }
