--- a/components/styles/top_picked.module.css
+++ b/components/styles/top_picked.module.css
@@ -24,6 +24,10 @@
     gap: 20px;
 }
 
+.top_service:hover .short_long_descriptions {
+    transform: translateY(0);
+}
+
 .top_title_box,
 .bottom_details {
     padding: 12px;
@@ -47,6 +51,24 @@
     overflow: hidden;
 }
 
+.top_service_big_img {
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    filter: blur(10px);
+}
+
+.top_service_img_shadow {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #ffffff50;
+    z-index: 100;
+}
+
 .bottom_details button {
     position: absolute;
     bottom: 12px;
@@ -62,7 +84,7 @@
 
 .top_service_num {
     /* background-color: red; */
-    border: 2px solid orange;
+    border: 4px solid orange;
     width: 45px;
     height: 45px;
     display: flex;
@@ -70,9 +92,11 @@
     align-items: center;
     border-radius: 50%;
     margin-bottom: 8px;
-    font-family: Inter;
+    font-family: Roboto;
+    font-size: 1.5rem;
     font-weight: bolder;
     color: orange;
+    position: relative;
 }
 
 .stars {
@@ -94,4 +118,25 @@
     height: 70%;
     display: flex;
     align-items: flex-end;
+    overflow: hidden;
+    position: relative;
+    z-index: 200;
+}
+
+.short_long_descriptions {
+    transform: translateY(80%);
+    transition: all 300ms ease-in-out;
+}
+
+.short_long_descriptions p {
+    font-family: Roboto;
+}
+
+.short_descrip {
+    font-weight: 500;
+    margin-bottom: 6px;
+}
+
+.long_descrip {
+    font-weight: 300;
 }
