--- a/components/styles/banner.module.css
+++ b/components/styles/banner.module.css
@@ -10,7 +10,7 @@
 .title {
     font-size: 4rem;
     font-family: Inter;
-    font-weight: black;
+    font-weight: 900;
     background: linear-gradient(45deg, #00dbde, #fc00ff);
     background-clip: text;
     -webkit-background-clip: text;
@@ -40,6 +40,7 @@
     display: flex;
     flex-direction: column;
     gap: 12px;
+    transform: translateY(20px) !important;
 }
 
 .cta_btn {
@@ -52,4 +53,63 @@
     min-width: 230px;
     max-width: 400px;
     border-radius: 6px;
+}
+
+
+
+
+
+
+@media(max-width: 1310px) {
+    .BannerContainer {
+        padding: 50px 100px;
+    }
+}
+
+@media(max-width: 1210px) {
+    .BannerContainer {
+        padding: 50px 50px;
+    }
+}
+
+@media(max-width: 1140px) {
+    .BannerContainer {
+        flex-direction: column;
+        padding: 50px;
+    }
+
+    .cta_btn_box {
+        flex-direction: row;
+        gap: 12px;
+        transform: translateY(-40px);
+    }
+
+    .title {
+        margin-top: 2rem;
+    }
+}
+
+@media(max-width: 805px) {
+    .title {
+        font-size: 3rem;
+        font-family: Inter;
+        line-height: 3.6rem;
+        margin-top: 4rem;
+        margin-bottom: 1rem;
+    }
+}
+
+@media(max-width: 550px) {
+    .title {
+        font-size: 3rem;
+        font-family: Inter;
+        line-height: 3.6rem;
+        margin-top: 4rem;
+        margin-bottom: 1rem;
+    }
+
+    .cta_btn_box {
+        flex-direction: column !important;
+        gap: 12px;
+    }
 }
