--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -211,6 +211,89 @@
 /* ////////////////////////////TOP PICKED SERVICES END/////////////////////////////////////////// */
 
 
+/* /////////////////////////////////TESTIMONIALS START/////////////////////////////////////////// */
+
+.testimonials_container {
+    /* background-color: red; */
+    min-height: 70vh;
+    padding-top: 4rem;
+    position: relative;
+    left: 0;
+    width: 100%;
+}
+
+.swiper_container {
+    /* padding: 50px 0; */
+}
+
+.testimonial_title{
+    background: linear-gradient(#00A3FF, #FC1A94);
+    font-family: Inter, sans-serif;
+    font-size: 2.2rem;
+    text-align: center;
+    font-weight: 900;
+    background-clip: text;
+    color: transparent;
+}
+
+.testimonial_sub_title{
+    text-align: center;
+    font-family: Roboto, sans-serif;
+}
+
+
+.testimonial_box {
+    padding-bottom: 40px;
+    background-color: #fff;
+    padding: 8px;
+    height: 50vh;
+    border-radius: 8px;
+}
+
+.user_info_box {
+    margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.user_picture {
+    background-color: #fff;
+    width: 60px;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.384);
+}
+
+.user_picture img {
+    width: 50%;
+}
+
+.testi_name{
+    font-family: Roboto, sans-serif;
+    font-weight: 700;
+    font-size: 1.2rem;
+}
+
+.testi_positions{
+    font-family: Roboto, sans-serif;
+    font-size: .8rem;
+    color: #1400FF;
+}
+
+.testi_story{
+    font-family: Roboto, sans-serif;
+    font-size: 1rem;
+    padding: 0 8px;
+}
+
+
+/* ///////////////////////////////////TESTIMONIALS END/////////////////////////////////////////// */
+
+
 /* MAIN STYLES END */
 /* /////////////////////////////////////////////////////////////////////////////////// */
 
